Bug 197402 - print to pdf doesn't print whole page in konqueror
Summary: print to pdf doesn't print whole page in konqueror
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: openSUSE Unspecified
: NOR normal
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 180088 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-06-21 18:19 UTC by Ruchir Brahmbhatt
Modified: 2010-02-24 03:14 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
HTML page not printing what I see in konqi (109.88 KB, text/html)
2009-08-25 19:41 UTC, Martin Koller
Details
printed page from previous attachment (51.63 KB, application/pdf)
2009-08-25 19:42 UTC, Martin Koller
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ruchir Brahmbhatt 2009-06-21 18:19:39 UTC
Version:           4.2.90 (using KDE 4.2.90)
Installed from:    SuSE RPMs

Steps to reproduce:
1. Open bugs.kde.org in konqueror.
2. File->Print.
3. Print to file.

Expected output:
Whole page should be converted to pdf.

Actual output:
Only header and left menu see in pdf.
Comment 1 pollywog 2009-06-21 18:26:34 UTC
I am running Konqueror 4.2.92 from Neon nightly builds, on a Kubuntu Jaunty system.  I also see only the header and left menu when printing to PDF, same page as above original bug report.
Comment 2 John Layt 2009-06-22 14:21:31 UTC
Does printing to a normal printer produce the same results?  How about printing to Postscript?
Comment 3 Ruchir Brahmbhatt 2009-06-22 15:46:33 UTC
I tried to print bugs.kde.org page.
I checked with ps bug got same results as pdf.
With actual printer, it printed left menu and content till search text box Links below that were not printed.
Comment 4 pollywog 2009-06-22 18:42:12 UTC
When I send the page to my printer from Konqueror, it does not print one or two pages correctly, instead printing many pages, with the left column on one sheet, a header on another, right column on another, etc.

I tried to print to a PostScript file and got an empty page.
Comment 5 Ruchir Brahmbhatt 2009-06-22 18:57:57 UTC
For me also it was like that. On actual printer, bko page printed in 3 pages. Left menu on one page, content till search text box on 2nd page and 3rd page with only one box nothing else.
Comment 6 Martin Koller 2009-08-25 19:41:50 UTC
Created attachment 36444 [details]
HTML page not printing what I see in konqi

Maybe this is the same problem: this attached page shows fine in konqi but printing to PDF produces a 6 page document where page 1 is almost empty, p2 is empty, page 3 contains something and all other pages are empty.
I'll also attach the resulting PDF
Comment 7 Martin Koller 2009-08-25 19:42:33 UTC
Created attachment 36445 [details]
printed page from previous attachment
Comment 8 Martin Koller 2009-08-25 19:43:36 UTC
*** Bug 180088 has been marked as a duplicate of this bug. ***
Comment 9 Ruchir Brahmbhatt 2009-12-06 14:40:15 UTC
Reproducible in 4.4 beta1(4.3.80).
Comment 10 Germain Garand 2010-02-12 05:20:36 UTC
SVN commit 1088979 by ggarand:

great, looks like these two Qt regressions have finally been fixed,
so we can enable back the optimized code and close all the printing bugs
that closing/restoring the QPainter triggered

I'll do that in two commits so that problems can be pin-pointed :

1) stop ending the QPainter before painting widgets to buffers,
 it's not needed anymore and Qt has poor support for that.

 Fixes printing on pages with form widgets.

BUG: 197402
BUG: 214352
BUG: 191999

 M  +4 -10     render_replaced.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1088979
Comment 11 Germain Garand 2010-02-24 03:14:49 UTC
SVN commit 1095342 by ggarand:

automatically merged revision 1088979:
great, looks like these two Qt regressions have finally been fixed,
so we can enable back the optimized code and close all the printing bugs
that closing/restoring the QPainter triggered

I'll do that in two commits so that problems can be pin-pointed :

1) stop ending the QPainter before painting widgets to buffers,
 it's not needed anymore and Qt has poor support for that.

 Fixes printing on pages with form widgets.

BUG: 197402
BUG: 214352

 M  +4 -10     render_replaced.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1095342