great, looks like these two Qt regressions have finally been fixed, so we can enable back the optimized code and close all the printing bugs that closing/restoring the QPainter triggered

I'll do that in two commits so that problems can be pin-pointed :

1) stop ending the QPainter before painting widgets to buffers,
 it's not needed anymore and Qt has poor support for that.

 Fixes printing on pages with form widgets.

BUG: 197402
BUG: 214352
BUG: 191999

svn path=/trunk/KDE/kdelibs/; revision=1088979